Voter's Registration Checklist Analyses

--- a/psc/templates/psc/vr_checklist_analysis.html
+++ b/psc/templates/psc/vr_checklist_analysis.html
@@ -17,66 +17,66 @@
                 </thead>
                     <tr>
                         <th>B</th>
-                        <th>{{ question.B.label }}</th>
-                        <th>{{ question.B.n }}</th>
-                        <th>{{ question.B.options.1 }}</th>
-                        <th><strong>{{ question.B.options.1|percentage:question.B.n }}</strong></th>
-                        <th>{{ question.B.options.2 }}</th>
-                        <th><strong>{{ question.B.options.2|percentage:question.B.n }}</strong></th>
+                        <td>{{ question.B.label }}</td>
+                        <td>{{ question.B.n }}</td>
+                        <td>{{ question.B.options.1 }}</td>
+                        <td><strong>{{ question.B.options.1|percentage:question.B.n }}</strong></td>
+                        <td>{{ question.B.options.2 }}</td>
+                        <td><strong>{{ question.B.options.2|percentage:question.B.n }}</strong></td>
                     </tr>
                     <tr>
                         <th>G</th>
-                        <th>{{ question.G.label }}</th>
-                        <th>{{ question.G.n }}</th>
-                        <th>{{ question.G.options.1 }}</th>
-                        <th><strong>{{ question.G.options.1|percentage:question.G.n }}</strong></th>
-                        <th>{{ question.G.options.2 }}</th>
-                        <th><strong>{{ question.G.options.2|percentage:question.G.n }}</strong></th>
+                        <td>{{ question.G.label }}</td>
+                        <td>{{ question.G.n }}</td>
+                        <td>{{ question.G.options.1 }}</td>
+                        <td><strong>{{ question.G.options.1|percentage:question.G.n }}</strong></td>
+                        <td>{{ question.G.options.2 }}</td>
+                        <td><strong>{{ question.G.options.2|percentage:question.G.n }}</strong></td>
                     </tr>
                     <tr>
                         <th>T</th>
-                        <th>{{ question.T.label }}</th>
-                        <th>{{ question.T.n }}</th>
-                        <th>{{ question.T.options.1 }}</th>
-                        <th><strong>{{ question.T.options.1|percentage:question.T.n }}</strong></th>
-                        <th>{{ question.T.options.2 }}</th>
-                        <th><strong>{{ question.T.options.2|percentage:question.T.n }}</strong></th>
+                        <td>{{ question.T.label }}</td>
+                        <td>{{ question.T.n }}</td>
+                        <td>{{ question.T.options.1 }}</td>
+                        <td><strong>{{ question.T.options.1|percentage:question.T.n }}</strong></td>
+                        <td>{{ question.T.options.2 }}</td>
+                        <td><strong>{{ question.T.options.2|percentage:question.T.n }}</strong></td>
                     </tr>
                     <tr>
                         <th>U</th>
-                        <th>{{ question.U.label }}</th>
-                        <th>{{ question.U.n }}</th>
-                        <th>{{ question.U.options.1 }}</th>
-                        <th><strong>{{ question.U.options.1|percentage:question.U.n }}</strong></th>
-                        <th>{{ question.U.options.2 }}</th>
-                        <th><strong>{{ question.U.options.2|percentage:question.U.n }}</strong></th>
+                        <td>{{ question.U.label }}</td>
+                        <td>{{ question.U.n }}</td>
+                        <td>{{ question.U.options.1 }}</td>
+                        <td><strong>{{ question.U.options.1|percentage:question.U.n }}</strong></td>
+                        <td>{{ question.U.options.2 }}</td>
+                        <td><strong>{{ question.U.options.2|percentage:question.U.n }}</strong></td>
                     </tr>
                     <tr>
                         <th>V</th>
-                        <th>{{ question.V.label }}</th>
-                        <th>{{ question.V.n }}</th>
-                        <th>{{ question.V.options.1 }}</th>
-                        <th><strong>{{ question.V.options.1|percentage:question.V.n }}</strong></th>
-                        <th>{{ question.V.options.2 }}</th>
-                        <th><strong>{{ question.V.options.2|percentage:question.V.n }}</strong></th>
+                        <td>{{ question.V.label }}</td>
+                        <td>{{ question.V.n }}</td>
+                        <td>{{ question.V.options.1 }}</td>
+                        <td><strong>{{ question.V.options.1|percentage:question.V.n }}</strong></td>
+                        <td>{{ question.V.options.2 }}</td>
+                        <td><strong>{{ question.V.options.2|percentage:question.V.n }}</strong></td>
                     </tr>
                     <tr>
                         <th>W</th>
-                        <th>{{ question.W.label }}</th>
-                        <th>{{ question.W.n }}</th>
-                        <th>{{ question.W.options.1 }}</th>
-                        <th><strong>{{ question.W.options.1|percentage:question.W.n }}</strong></th>
-                        <th>{{ question.W.options.2 }}</th>
-                        <th><strong>{{ question.W.options.2|percentage:question.W.n }}</strong></th>
+                        <td>{{ question.W.label }}</td>
+                        <td>{{ question.W.n }}</td>
+                        <td>{{ question.W.options.1 }}</td>
+                        <td><strong>{{ question.W.options.1|percentage:question.W.n }}</strong></td>
+                        <td>{{ question.W.options.2 }}</td>
+                        <td><strong>{{ question.W.options.2|percentage:question.W.n }}</strong></td>
                     </tr>
                     <tr>
                         <th>X</th>
-                        <th>{{ question.X.label }}</th>
-                        <th>{{ question.X.n }}</th>
-                        <th>{{ question.X.options.1 }}</th>
-                        <th><strong>{{ question.X.options.1|percentage:question.X.n }}</strong></th>
-                        <th>{{ question.X.options.2 }}</th>
-                        <th><strong>{{ question.X.options.2|percentage:question.X.n }}</strong></th>
+                        <td>{{ question.X.label }}</td>
+                        <td>{{ question.X.n }}</td>
+                        <td>{{ question.X.options.1 }}</td>
+                        <td><strong>{{ question.X.options.1|percentage:question.X.n }}</strong></td>
+                        <td>{{ question.X.options.2 }}</td>
+                        <td><strong>{{ question.X.options.2|percentage:question.X.n }}</strong></td>
                     </tr>
             </table>
         </div>
@@ -317,7 +317,7 @@
                 </thead>
                     <tr>
                         <th>A</th>
-                        <th>{{ question.A.label }}</td>
+                        <td>{{ question.A.label }}</td>
                         <td>{{ question.A.n }}</td>
                         <td>{{ question.A.options.1 }}</td>
 												<td><strong>{{ question.A.options.1|percentage:question.A.n }}</strong></td>
