--- a/psc/templates/psc/state_summary.html
+++ b/psc/templates/psc/state_summary.html
@@ -4,7 +4,7 @@
 <div class="grid_16">
     <div class="box">
         <h2>A Summary of State<span class="flag">
-                <button onclick="location.href='{% url psc.views.state_summary %}'">Refresh</button>
+                <button onclick="location.href='{% url psc.views.vr_state_summary %}'">Refresh</button>
         </span></h2>
         <div class="block">
             <table width="100%" class="summary">
