template fix for the vr checklist analysis

--- a/psc/templates/psc/vr_checklist_analysis.html
+++ b/psc/templates/psc/vr_checklist_analysis.html
@@ -425,6 +425,7 @@
                     <td>{{ question.custom.label }}</td>
                     <td>{{ question.custom.n }}</td>
                     <td>{{ question.custom.zero_two }}</td>
+                    <td>{{ question.custom.zero_two }}</td>
                     <td>{{ question.custom.two_five }}</td>
                     <td>{{ question.custom.five_zero }}</td>
                     <td>{{ question.custom.ten_above }}</td>
