final tidy up for the checklist analyses - at least for now

--- a/psc/templates/psc/layout.html
+++ b/psc/templates/psc/layout.html
@@ -44,6 +44,9 @@
                             <li>
                                 <a href="{% url psc.views.vr_state_summary %}">State Summary</a>
                             </li>
+                            <li>
+                                <a href="{% url psc.views.vr_checklist_analysis %}">Checklist Analyses</a>
+                            </li>
 														{% endif %}
                         </ul>
                     </li>
