filtering by date on the dashboard

--- a/psc/templates/psc/home.html
+++ b/psc/templates/psc/home.html
@@ -7,7 +7,8 @@
                 <div class="controls">
                
                 <form method="get">
-                     Filter by zone
+                     Filters
+								{{ filter_form.date }}
 								{{ filter_form.zone }} 
                 <input name="Go" value="GO" type="submit" style="height: 34px; font-size: 20px">
                 </form>
