modified vr analysis filter form position

--- a/psc/templates/psc/vr_checklist_analysis.html
+++ b/psc/templates/psc/vr_checklist_analysis.html
@@ -28,7 +28,6 @@
 {% load calc %}
 <div class="grid_16">
     <div class="box">
-        <h2>Yes / No Questions</h2>
         <div class="block">
             <div id="filter">
                 <form action="" method="get" id="filter_form" accept-charset="utf-8">
@@ -52,6 +51,11 @@
                     </table>
                 </form>
             </div>
+        </div>
+        </div>
+        <div class="box">
+        <h2>Yes / No Questions</h2>
+        <div class="block">
             <table width="100%" class="summary">
                 <thead>
                     <tr>
