displaying big N for checklist questions

--- a/psc/templates/psc/vr_checklist_analysis.html
+++ b/psc/templates/psc/vr_checklist_analysis.html
@@ -61,6 +61,7 @@
                     <tr>
                         <th>&nbsp;</th>
                         <th>Question</th>
+                        <th>N</th>
                         <th>n</th>
                         <th colspan="2">Yes</th>
                         <th colspan="2">No</th>
@@ -69,6 +70,7 @@
                     <tr>
                         <th>B</th>
                         <td>{{ question.B.label }}</td>
+                        <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.B.n }}</td>
                         <td>{{ question.B.options.1 }}</td>
                         <td><strong>{{ question.B.options.1|percentage:question.B.n }}</strong></td>
@@ -78,6 +80,7 @@
                     <tr>
                         <th>G</th>
                         <td>{{ question.G.label }}</td>
+                        <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.G.n }}</td>
                         <td>{{ question.G.options.1 }}</td>
                         <td><strong>{{ question.G.options.1|percentage:question.G.n }}</strong></td>
@@ -87,6 +90,7 @@
                     <tr>
                         <th>T</th>
                         <td>{{ question.T.label }}</td>
+                        <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.T.n }}</td>
                         <td>{{ question.T.options.1 }}</td>
                         <td><strong>{{ question.T.options.1|percentage:question.T.n }}</strong></td>
@@ -96,6 +100,7 @@
                     <tr>
                         <th>U</th>
                         <td>{{ question.U.label }}</td>
+                        <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.U.n }}</td>
                         <td>{{ question.U.options.1 }}</td>
                         <td><strong>{{ question.U.options.1|percentage:question.U.n }}</strong></td>
@@ -105,6 +110,7 @@
                     <tr>
                         <th>V</th>
                         <td>{{ question.V.label }}</td>
+                        <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.V.n }}</td>
                         <td>{{ question.V.options.1 }}</td>
                         <td><strong>{{ question.V.options.1|percentage:question.V.n }}</strong></td>
@@ -114,6 +120,7 @@
                     <tr>
                         <th>W</th>
                         <td>{{ question.W.label }}</td>
+                        <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.W.n }}</td>
                         <td>{{ question.W.options.1 }}</td>
                         <td><strong>{{ question.W.options.1|percentage:question.W.n }}</strong></td>
@@ -123,6 +130,7 @@
                     <tr>
                         <th>X</th>
                         <td>{{ question.X.label }}</td>
+                        <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.X.n }}</td>
                         <td>{{ question.X.options.1 }}</td>
                         <td><strong>{{ question.X.options.1|percentage:question.X.n }}</strong></td>
@@ -140,6 +148,7 @@
                     <tr>
                         <th>&nbsp;</th>
                         <th>Question</th>
+                        <th>N</th>
                         <th>n</th>
                         <th colspan="2">None</th>
                         <th colspan="2">Few</th>
@@ -151,6 +160,7 @@
                     <tr>
                         <th>H</th>
                         <td>{{ question.H.label }}</td>
+                        <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.H.n }}</td>
                         <td>{{ question.H.options.1 }}</td>
                         <td><strong>{{ question.H.options.1|percentage:question.H.n }}</strong></td>
@@ -166,6 +176,7 @@
                     <tr>
                         <th>J</th>
                         <td>{{ question.J.label }}</td>
+                        <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.J.n }}</td>
                         <td>{{ question.J.options.1 }}</td>
                         <td><strong>{{ question.J.options.1|percentage:question.J.n }}</strong></td>
@@ -181,6 +192,7 @@
                     <tr>
                         <th>K</th>
                         <td>{{ question.K.label }}</td>
+                        <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.K.n }}</td>
                         <td>{{ question.K.options.1 }}</td>
                         <td><strong>{{ question.K.options.1|percentage:question.K.n }}</strong></td>
@@ -196,6 +208,7 @@
                     <tr>
                         <th>M</th>
                         <td>{{ question.M.label }}</td>
+                        <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.M.n }}</td>
                         <td>{{ question.M.options.1 }}</td>
                         <td><strong>{{ question.M.options.1|percentage:question.M.n }}</strong></td>
@@ -211,6 +224,7 @@
                     <tr>
                         <th>N</th>
                         <td>{{ question.N.label }}</td>
+                        <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.N.n }}</td>
                         <td>{{ question.N.options.1 }}</td>
                         <td><strong>{{ question.N.options.1|percentage:question.N.n }}</strong></td>
@@ -226,6 +240,7 @@
                     <tr>
                         <th>P</th>
                         <td>{{ question.P.label }}</td>
+                        <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.P.n }}</td>
                         <td>{{ question.P.options.1 }}</td>
                         <td><strong>{{ question.P.options.1|percentage:question.P.n }}</strong></td>
@@ -241,6 +256,7 @@
                     <tr>
                         <th>Q</th>
                         <td>{{ question.Q.label }}</td>
+                        <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.Q.n }}</td>
                         <td>{{ question.Q.options.1 }}</td>
                         <td><strong>{{ question.Q.options.1|percentage:question.Q.n }}</strong></td>
@@ -256,6 +272,7 @@
                     <tr>
                         <th>R</th>
                         <td>{{ question.R.label }}</td>
+                        <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.R.n }}</td>
                         <td>{{ question.R.options.1 }}</td>
                         <td><strong>{{ question.R.options.1|percentage:question.R.n }}</strong></td>
@@ -271,6 +288,7 @@
                     <tr>
                         <th>S</th>
                         <td>{{ question.S.label }}</td>
+                        <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.S.n }}</td>
                         <td>{{ question.S.options.1 }}</td>
                         <td><strong>{{ question.S.options.1|percentage:question.S.n }}</strong></td>
@@ -294,6 +312,7 @@
                     <tr>
                         <th>&nbsp;</th>
                         <th>Question</th>
+                        <th>N</th>
                         <th>n</th>
                         <th colspan="2">Missing / Broken Computer</th>
                         <th colspan="2">Missing / Broken Camera</th>
@@ -304,6 +323,7 @@
                     <tr>
                         <th>D</th>
                         <td>{{ question.D.label }}</td>
+                        <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.D.n }}</td>
                         <td>{{ question.D.options.1 }}</td>
                         <td><strong>{{ question.D.options.1|percentage:question.D.n }}</strong></td>
@@ -325,6 +345,7 @@
                     <tr>
                         <th>&nbsp;</th>
                         <th>Question</th>
+                        <th>N</th>
                         <th>n</th>
                         <th colspan="2">Manual Register of Voters</th>
                         <th colspan="2">Indelible Ink to Mark Figures</th>
@@ -336,6 +357,7 @@
                     <tr>
                         <th>E</th>
                         <td>{{ question.E.label }}</td>
+                        <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.E.n }}</td>
                         <td>{{ question.E.options.1 }}</td>
                         <td><strong>{{ question.E.options.1|percentage:question.E.n }}</strong></td>
@@ -359,6 +381,7 @@
                     <tr>
                         <th>&nbsp;</th>
                         <th>Question</th>
+                        <th>N</th>
                         <th>n</th>
                         <th colspan="2">By 8:00 AM</th>
                         <th colspan="2">Between 8 &amp; 10 AM</th>
@@ -369,6 +392,7 @@
                     <tr>
                         <th>A</th>
                         <td>{{ question.A.label }}</td>
+                        <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.A.n }}</td>
                         <td>{{ question.A.options.1 }}</td>
 												<td><strong>{{ question.A.options.1|percentage:question.A.n }}</strong></td>
@@ -390,6 +414,7 @@
                     <tr>
                         <th>&nbsp;</th>
                         <th>Question</th>
+                        <th>N</th>
                         <th>n</th>
                         <th>Average</th>                       
                     </tr>
@@ -397,18 +422,21 @@
                 <tr>
                     <td>Y</td>
                     <td>{{ question.Y.label }}</td>
+                    <td>{{ question.no_of_checklists }}</td>
                     <td>{{ question.Y.n }}</td>
                     <td>{{ question.Y.mean|floatformat:2 }}</td>
                 </tr>
                 <tr>
                     <td>Z</td>
                     <td>{{ question.Z.label }}</td>
+                    <td>{{ question.no_of_checklists }}</td>
                     <td>{{ question.Z.n }}</td>
                     <td>{{ question.Z.mean|floatformat:2 }}</td>
                 </tr>
                 <tr>
                     <td>AA</td>
                     <td>{{ question.AA.label }}</td>
+                    <td>{{ question.no_of_checklists }}</td>
                     <td>{{ question.AA.n }}</td>
                     <td>{{ question.AA.mean|floatformat:2 }}</td>
                 </tr>
@@ -423,6 +451,7 @@
                     <tr>
                         <th>&nbsp;</th>
                         <th>Question</th>
+                        <th>N</th>
                         <th>n</th>
                         <th>Average</th>
 												<th>0s</th>
@@ -436,6 +465,7 @@
                 <tr>
                     <td>C</td>
                     <td>{{ question.C.label }}</td>
+                    <td>{{ question.no_of_checklists }}</td>
                     <td>{{ question.C.n }}</td>
                     <td>{{ question.C.mean|floatformat:2 }}</td>
                     <td>{{ question.C.options.0 }} <strong>{{ question.C.options.0|percentage:question.C.n }}</strong></td>
@@ -451,6 +481,7 @@
                     <tr>
                         <th>&nbsp;</th>
                         <th>Question</th>
+                        <th>N</th>
                         <th>n</th>
                         <th>Average</th>
                     </tr>
@@ -458,6 +489,7 @@
                 <tr>
                     <td>F</td>
                     <td>{{ question.F.label }}</td>
+                    <td>{{ question.no_of_checklists }}</td>
                     <td>{{ question.F.valid_n }}</td>
                     <td>{{ question.F.mean|floatformat:2 }}</td>
                 </tr>
